feat: 잔액 사용 취소 api 추가