@@ -14,6 +14,9 @@ java {
 }
 
 configurations {
+    all {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -42,4 +45,9 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-Xshare:off'
+}
+
+test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
